plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.cloud.tools.jib' version '3.5.2'
}

group = 'com.AbsoluteValue'
version = '0.0.1-SNAPSHOT'
description = 'RESTful API'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Dependency
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // H2 (Test Database)
    testRuntimeOnly 'com.h2database:h2'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // Junit
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Logback
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'

    // Prometheus
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // jjwt
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
}

def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// gradle class 시에 QClass 디렉토리 삭제
clean {
    delete file(generated)
}

tasks.named('test') {
    useJUnitPlatform()
}

// Test시 나오는 경고 삭제 용도
tasks.withType(Test).configureEach {
    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
    jvmArgs += ["-Xshare:off"]
}

jib {
    container {
        mainClass = 'com.AbsoluteValue.RESTful.RestFulApplication'
    }
    from {
        image = 'eclipse-temurin:25-jre-alpine'
    }
    to {
        image = 'absolutevalues/restful-api'
        tags = ['latest']
        if (envVars["DOCKERHUB_USERNAME"] && envVars["DOCKERHUB_PASSWORD"]) {
            auth {
                username = envVars["DOCKERHUB_USERNAME"]
                password = envVars["DOCKERHUB_PASSWORD"]
            }
        }
    }
}
